<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@drawable/textview_bg">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="15dp">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/writename"
                android:id="@+id/name" android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="15dp">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/writeadress"
                android:id="@+id/adress" android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="15dp">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/writephone"
                android:id="@+id/phone"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp">
        <Spinner
                android:layout_width="fill_parent"
                android:entries="@array/speeds"
                android:layout_height="fill_parent"
                android:id="@+id/speed"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:padding="10dp">
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/time"/>
    </FrameLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/addpizza"
            android:id="@+id/button" android:layout_weight="1" android:layout_gravity="center"
            android:onClick="addPizza"/>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
</LinearLayout>